# parallel-mergesort

./: README.md  merge-mpi.cpp  merge-omp.cpp  mergeSort.cpp  mergeSort.hpp  meson.build  util.cpp  util.hpp
